feat: reset FE app; logout endpoint; docs/tests
